--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Demo register user with spring boot</description>
+	<description>Demo register user with spring</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
