--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
-    - mvnw spring-boot:run
+    - mvnw compile
     - echo "Compile complete."
 
 unit-test-job:   # This job runs in the test stage.
