--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
     - mvnw compile
     - echo "Compile complete."
 
@@ -29,6 +30,7 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
+    - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
     - mvnw test
     - echo "Code coverage is 90%"
 
