--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Compiling the code..."
     - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
-    - mvnw compile
+    - mvnw.cmd compile
     - echo "Compile complete."
 
 unit-test-job:   # This job runs in the test stage.
@@ -31,7 +31,7 @@ unit-test-job:   # This job runs in the test stage.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
-    - mvnw test
+    - mvnw.cmd test
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
