--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,16 +22,14 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
-    - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
-    - mvnw.cmd compile
+    - mvn compile
     - echo "Compile complete."
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - cd "C:\Users\ROLAND\Documents\programing learning\manage_user"
-    - mvnw.cmd test
+    - mvn test
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
