--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,9 @@ stages:          # List of stages for jobs, and their order of execution
   - build
   - test
   - deploy
-
+cache:
+  paths:
+    - .m2/repository
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
