--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
-    - mvn compile
-      - Dhttps.protocols=TLSv1.2
-      - Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
-      - Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
-      - Dorg.slf4j.simpleLogger.showDateTime=true
-      - Djava.awt.headless=true
-      --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true
+    - mvn compile -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
     - echo "Compile complete."
   image: openjdk:8-alpine
     
@@ -40,13 +34,7 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - ./mvn test
-      -Dhttps.protocols=TLSv1.2
-      -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
-      -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
-      -Dorg.slf4j.simpleLogger.showDateTime=true
-      -Djava.awt.headless=true
-      --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true
+    - mvn test -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
   image: openjdk:8-alpine
     - echo "Code coverage is 90%"
 
