--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ cache:
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - echo "Compiling the code..."
+    - echo "Compiling the code....."
     - mvn compile -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
     - echo "Compile complete."
   image: openjdk:8-alpine
