--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code....."
-    - mvn compile -nsu
+    - mvn compile -o
     - echo "Compile complete."
   image: openjdk:8-alpine
     
