--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code....."
-    - mvn compile -nsu -o
+    - mvn compile -o
     - echo "Compile complete."
   image: openjdk:8-alpine
     
@@ -34,7 +34,7 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - mvn test -nsu -o
+    - mvn test -o
   image: openjdk:8-alpine
     - echo "Code coverage is 90%"
 
