--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,7 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages:          # List of stages for jobs, and their order of execution
-  - build
-  - test
-  - deploy
+  - package
 cache:
   paths:
     - .m2/repository
@@ -39,12 +37,18 @@ unit-test-job:   # This job runs in the test stage.
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
+  stage: test # It can run at the same time as unit-test-job (in parallel).
+  allow_failure: true   
   script:
     - echo "Linting code... This will take about 10 seconds."
     - sleep 10
     - echo "No lint issues found."
-
+package-job:
+  stage: package
+  script:
+    - echo "packaging your app"
+    - mvn package 
+    - scp -i $CI_PROJECT_NAME/ec2_giltab.pem $CI_PROJECT_NAME/target/* ec2-user@3.91.241.97:home/ec2-user/
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
