change app config ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,5 @@ package-job:
   stage: package
   script:
     - echo "packaging your app"
-    - mvn package 
-    - scp -i $CI_PROJECT_NAME/ec2_giltab.pem $CI_PROJECT_NAME/target/* ec2-user@3.91.241.97:home/ec2-user/
+    - echo $CI_PROJECT_NAME/ec2_giltab.pem
 
