--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,5 @@ package-job:
   stage: package
   script:
     - echo "packaging your app"
-    - cat $PWD\$CI_PROJECT_NAME\ec2_giltab.pem
+    - cat $PWD\ec2_giltab.pem
 
