--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,5 +24,5 @@ package-job:
   script:
     - echo "packaging your app"
     - echo $CI_PROJECT_NAME\ec2_giltab.pem
-    - scp -i $PWD\ec2_giltab.pem $CI_PROJECT_NAME/target/* ec2-user@3.91.241.97:home/ec2-user/
+    - scp -i $PWD\ec2_giltab.pem -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $CI_PROJECT_NAME/target/* ec2-user@3.91.241.97:home/ec2-user/
 
