change app config ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,6 @@ cache:
 package-deploy-job:
   stage: package
   script:
-    - echo "packaging your app "
-    - echo $PWD
+    - echo "packaging your app"
+    - git push heroku main
 
