--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,18 +14,44 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages:          # List of stages for jobs, and their order of execution
+  - build
+  - test
   - package
+  - deploy
 cache:
   paths:
     - .m2/repository
   key: "$CI_JOB_NAME"
-package-deploy-job:
-  type: deploy
-  stage: package
-  image: ruby:latest
+build-job:       # This job runs in the build stage, which runs first.
+  stage: build
   script:
-    - apt-get update -yq
-    - apt-get install -y ruby-dev
-    - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
+    - echo "Compiling the code....."
+    - mvn compile -o
+    - echo "Compile complete."
+  image: openjdk:8-alpine
+unit-test-job:   # This job runs in the test stage.
+  stage: test    # It only starts when the job in the build stage completes successfully.
+  script:
+    - echo "Running unit tests... This will take about 60 seconds."
+    - mvn test -o
+  image: openjdk:8-alpine
+    - echo "Code coverage is 90%"
 
+lint-test-job:   # This job also runs in the test stage.
+  stage: test # It can run at the same time as unit-test-job (in parallel).
+  allow_failure: true   
+  script:
+    - echo "Linting code... This will take about 10 seconds."
+    - sleep 10
+    - echo "No lint issues found."
+package-job:
+  stage: package
+  script:
+    - echo "packaging your app"
+    - mvn package 
+deploy-job:      # This job runs in the deploy stage.
+  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+  script:
+    - echo "Deploying application..."
+    - cp target\demo-0.0.1-SNAPSHOT.jar C:\Users\ROLAND\Desktop\demoApp\
+    - echo "Application successfully deployed."
