change app config ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,12 +19,5 @@ deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
     - echo "Deploying application..."
-    - Remove-Item .git -Recurse -Force -Confirm:$false
-    - git init
-    - git config --global user.email "GitLab-user@demo.com"
-    - git config --global user.name "GitLab-user"
-    - git remote add heroku https://git.heroku.com/mysterious-scrubland-19985.git
-    - git add .
-    - git commit -m "init"
-    - git push --force heroku master
+    - dpl --provider=heroku --app=mysterious-scrubland-19985 --api_key=$HEROKU_API_KEY
     - echo "Application successfully deployed"
