--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,10 @@
 stages:          # List of stages for jobs, and their order of execution
   - deploy
 deploy-job:      # This job runs in the deploy stage.
+  tags:
+    - shell
+    - test
+    - windons
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
     - echo "Deploying application........"
