change app config ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,5 @@ deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
     - echo "Deploying application......"
-    - dpl --provider=heroku --app=mysterious-scrubland-19985 --api_key=0dbebf2d-ca81-4288-a0f6-818f3f1b1a30
+    - dpl --provider=heroku --app=mysterious-scrubland-19985 --api_key=$HEROKU_API_KEY
     - echo "Application successfully deployed"
