--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,4 +22,5 @@ deploy-job:      # This job runs in the deploy stage.
     - windows
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
+    - echo "Deploiement en cours..........."
     - dpl --provider=heroku --app=mysterious-scrubland-19985 --api_key=$HEROKU_API_KEY
