--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,4 +23,4 @@ deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   script:
     - echo "Deploiement en cours..........."
-    - dpl --provider=heroku --app=mysterious-scrubland-19985 --api_key=$HEROKU_API_KEY
+    - dpl --provider=heroku --strategy=git --git=https://git.heroku.com/mysterious-scrubland-19985.git --api_key=0dbebf2d-ca81-4288-a0f6-818f3f1b1a30 --app=mysterious-scrubland-19985
