--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,21 +21,30 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:
   stage: build
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH=="main"
+    - if: $CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH!="main" && $CI_COMMIT_BRANCH!="develop"
       when: manual
       allow_failure: true
+    #- if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
   script:
     - echo "Starting building....."
     - mvn compile -o
     - echo "build finished successfully"
 test-job:
   stage: test
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH!="main" && $CI_COMMIT_BRANCH!="develop"
+      when: manual
+      allow_failure: true  
   script:
     - echo "Starting testing....."
     - mvn test -o
     - echo "test finished successfully"
 quality-job:
   stage: quality
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "push" && $CI_COMMIT_BRANCH!="main" && $CI_COMMIT_BRANCH!="develop"
+      when: manual
+      allow_failure: true
   script:
     - echo "Starting test quality....."
     - mvn compile -o
@@ -46,8 +55,12 @@ deploy-job:      # This job runs in the deploy stage.
     - test
     - windows
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_COMMIT_BRANCH-="main"
+      when: manual
+      allow_failure: true  
   script:
-    - echo "Deploiement en cours..........."
+    - echo "Deployment..........."
     - cd ..
     - git clone https://gitlab.com/bekonrolang/manage_user.git tmp_repo
     - cd tmp_repo
