--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ deploy-job:      # This job runs in the deploy stage.
     - windows
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_COMMIT_BRANCH-="main"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_COMMIT_BRANCH=="main"
       when: manual
       allow_failure: true  
   script:
